Use Paths.get for scenario resolution